<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather Forecast Application</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_settings">Settings</string>
    <string name="location">Location</string>
    <string name="languages">Languages</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind speed</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="enable">Enable</string>
    <string name="temperature">Temperature</string>
    <string name="notifications">Notifications</string>
    <string name="disable">Disable</string>
    <string name="cloud">Cloud</string>
    <string name="google_maps_api_key">AIzaSyBnwre378pcYLgQTK8EWBljfgvT_tzDHIo</string>
    <string name="visibility">Visibility</string>
    <string name="temperaturee">Temperature</string>
    <string name="wind">Wind</string>
    <string name="perssure">Perssure</string>
    <string name="humidity">Humidity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="set_alert">Set Alert</string>
    <string name="alert">Alert</string>
    <string name="alarm">Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection.</string>
    <string name="delete_this_meal_will_also_delete_its_data">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="notification_access_required">Notification Access Required</string>
    <string name="to_receive_weather_alerts_please_enable_notification_access_for_this_app">To receive weather alerts, please enable notification access for this app.</string>
</resources>