<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weatherforecastapplication.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="log"
            app:argType="string"
            android:defaultValue="0.0" />
        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="0.0" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.weatherforecastapplication.favorite.view.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_map"
            app:destination="@id/navigation_map" >
        </action>
        <argument
            android:name="log"
            app:argType="string"
            android:defaultValue="0.0" />
        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="0.0" />
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.example.weatherforecastapplication.alerts.view.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" >
        <action
            android:id="@+id/action_navigation_alerts_to_navigation_map"
            app:destination="@id/navigation_map">
        </action>
        <argument
            android:name="log"
            app:argType="string"
            android:defaultValue="0.0" />
        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="0.0" />

    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.weatherforecastapplication.settings.view.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_map"
            app:destination="@id/navigation_map" >

        </action>

    </fragment>
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.weatherforecastapplication.MAPFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_m_a_p" >

        <action
            android:id="@+id/action_navigation_map_to_navigation_alerts"
            app:destination="@id/navigation_alerts">
    </action>

        <action
            android:id="@+id/action_navigation_map_to_navigation_favorite"
            app:destination="@id/navigation_favorite" >

        </action>
        <action
            android:id="@+id/action_navigation_map_to_navigation_home"
            app:destination="@id/navigation_home" >

        </action>
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>